<resources>
    <string name="app_name">CCMA</string>
    <string name="signup_title">Not a member?</string>
    <string name="signup_title2">Sign up now!</string>
    <string name="login_title">Login</string>
    <string name="login_title2">Already a member?</string>
    <string name="last_comment">Last Comment</string>
    <string name="app_welcome_title">Welcome To CCMA</string>
    <string name="loading_excelTitle">Loading excel data, Please wait...</string>
    <string name="adding_account_text">Adding Account, Please wait....</string>
    <string name="self_added_text">1. Aamirr khan\n</string>
    <string name="self_account">Self Account</string>
    <string name="other_account">Family Account</string>
    <string name="search_group_title">Search with Group Number</string>
    <string name="balance_due">Balance due and classification</string>
    <string name="for_acc">"For A/C No "</string>
    <string name="contact_us">Contact Us</string>
    <string name="account_holder_address">Account Holder Address</string>
    <string name="account_holder_name">Account Holder Name</string>
    <string name="account_number">Account Number</string>
    <string name="sanction_amount">Sanction Amount</string>
    <string name="mobile_number1">Mobile number1</string>
    <string name="mobile_number2">Mobile number2</string>
    <string name="sanction_date">Sanction date</string>
    <string name="project_name">Project Name</string>
    <string name="add_account">Add Account</string>
    <string name="delete_this_group">Delete This Group</string>
</resources>
